# adventofcode

./: pyproject.toml
2024/day1/: solution.py  task.md  task2.md
2024/day2/: solution.py  solution_part2.py
2024/day3/: input.txt  solution.py  solution_part2.py  task.md
2024/day4/: solution.py  solution_part2.py
2024/day5/: solution.py  task.md
