[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8.3"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "notebooks"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100


fixable = ["A", "B", "C", "D", "E", "F", "I"]
ignore = ["E501"]                             # Avoid enforcing line-length violations
